@@ -1,3 +1,5 @@
+* use getaddrinfo and getnameinfo where available
+
 ENet 1.3.13 (April 30, 2015):
 
 * miscellaneous bug fixes
